@@ -447,7 +447,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                coll = (Collection<Object>) instanceType.newInstance();
+                coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -621,7 +621,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                map = (Map<Object, Object>) instanceType.newInstance();
+                map = (Map<Object, Object>) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
